--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,7 @@
 body{	max-width:800px; margin: auto; background-color: #893531; color:beige;}
 a{	text-decoration:none; color:beige}
 ul li a:hover{color: gray}
+ul li{	display: inline-block; text-decoration: underline; margin: 10px; }
 input{	margin: 0px; 
 	padding: 0px 0px 0px 2px;
 	border-radius:0px;
@@ -65,6 +66,7 @@ footer{	margin-top: 2em;
 	<nav id="nav">
 			<ul>
 				<li><a href="./feeds.html">📜</a></li>
+				<li><a href="./f1-schedule.txt">🏎️📆</a></li>
 			</ul>
 	</nav>
 
