Added motogp schedule list 2023

--- a/web/index.html
+++ b/web/index.html
@@ -67,6 +67,7 @@ footer{	margin-top: 2em;
 			<ul>
 				<li><a href="./feeds.html">📜</a></li>
 				<li><a href="./f1-schedule.txt">🏎️📆</a></li>
+				<li><a href="./motogp-schedule.txt">🏍️📆</a></li>
 			</ul>
 	</nav>
 
