--- a/web/index.html
+++ b/web/index.html
@@ -66,6 +66,7 @@ footer{	margin-top: 2em;
 	<nav id="nav">
 			<ul>
 				<li><a href="./feeds.html">📜</a></li>
+				<li><a href="./traffic.html">🚗</a></li>
 				<li><a href="./f1-schedule.txt">🏎️📆</a></li>
 				<li><a href="./motogp-schedule.txt">🏍️📆</a></li>
 			</ul>
@@ -115,6 +116,10 @@ footer{	margin-top: 2em;
 		<a href='./pics/forecastTemp_0days.gif' ><img src='./pics/forecastTemp_0days.webp' loading=lazy width=237 height=290 style="margin: 5px"></a>
 		<a href='./pics/forecastWind_0days.gif' ><img src='./pics/forecastWind_0days.webp' loading=lazy width=237 height=290 style="margin: 5px"></a>
 		<a href='./pics/forecastPrecip_1days.gif' ><img src='./pics/forecastPrecip_1days.webp' loading=lazy width=237 height=290 style="margin: 5px"></a>
+
+		<a href='./traffic.html' ><img src='https://api.dopravniinfo.cz/CameraImage.ashx?camera=3008' loading=lazy width=400 height=220 style="margin: 5px"></a>
+		<!--<a href='./traffic.html' ><img src='./pics/CameraImage3008.jpg' loading=lazy width=400 height=220 style="margin: 5px"></a>-->
+
 		<p>⚠️The images present on this page may be subject to copyright.</p>
 
 		<script async="" src="./js/module-wttrin-widget.js"></script>
