index.html: added alt attribute

--- a/web/index.html
+++ b/web/index.html
@@ -117,8 +117,8 @@ footer{	margin-top: 2em;
 		<a href='./pics/forecastWind_0days.gif' ><img src='./pics/forecastWind_0days.webp' loading=lazy width=237 height=290 style="margin: 5px"></a>
 		<a href='./pics/forecastPrecip_1days.gif' ><img src='./pics/forecastPrecip_1days.webp' loading=lazy width=237 height=290 style="margin: 5px"></a>
 
-		<a href='./traffic.html' ><img src='https://api.dopravniinfo.cz/CameraImage.ashx?camera=3008' loading=lazy width=400 height=220 style="margin: 5px"></a>
-		<!--<a href='./traffic.html' ><img src='./pics/CameraImage3008.jpg' loading=lazy width=400 height=220 style="margin: 5px"></a>-->
+		<a href='./traffic.html' ><img src='https://api.dopravniinfo.cz/CameraImage.ashx?camera=3008' loading=lazy width=400 height=220 style="margin: 5px" alt="Dopravní Informace"></a>
+		<!--<a href='./traffic.html' ><img src='./pics/CameraImage3008.webp' loading=lazy width=400 height=220 style="margin: 5px" alt="Dopravní Informace"></a>-->
 
 		<p>⚠️The images present on this page may be subject to copyright.</p>
 
