traffic.html: added kilometers

--- a/web/traffic.html
+++ b/web/traffic.html
@@ -53,54 +53,54 @@ div{
 		</div>
 
 		<div>
-			<h4>Paceřák, směr Chrastava.</h4>
+			<h4>Paceřák, 39,3 km, směr Chrastava.</h4>
 			<a href='https://api.dopravniinfo.cz/CameraImage.ashx?camera=3007' >
 				<img src='https://api.dopravniinfo.cz/CameraImage.ashx?camera=3007' loading=lazy alt="Kamera - Paceřák, směr Chrastava.">
 			</a>
 		</div>	
 
 		<div>
-			<h4>Paceřák, směr Praha.</h4>
+			<h4>Paceřák, 39,3 km, směr Praha.</h4>
 			<a href='https://api.dopravniinfo.cz/CameraImage.ashx?camera=3008' >
 				<img src='https://api.dopravniinfo.cz/CameraImage.ashx?camera=3008' loading=lazy alt="Kamera - Paceřák, směr Praha.">
 			</a>
 		</div>	
 
 		<div>
-			<h4>Sjezd na Jablonec, směr Chrastava.</h4>
+			<h4>Sjezd na Jablonec, 33,3 km, směr Chrastava.</h4>
 			<a href='https://api.dopravniinfo.cz/CameraImage.ashx?camera=3005' >
 				<img src='https://api.dopravniinfo.cz/CameraImage.ashx?camera=3005' loading=lazy alt="Kamera - Sjezd na Jablonec, směr Chrastava.">
 			</a>
 		</div>	
 		
 		<div>
-			<h4>Výjezd od Jablonce, směr Praha.</h4>
+			<h4>Výjezd od Jablonce, 33,3 km, směr Praha.</h4>
 			<a href='https://api.dopravniinfo.cz/CameraImage.ashx?camera=3006' >
 				<img src='https://api.dopravniinfo.cz/CameraImage.ashx?camera=3006' loading=lazy alt="Kamera - Výjezd od Jablonce, směr Praha.">
 			</a>
 		</div>
 
 		<div>
-			<h4>Stoupání za výjezdem od Jablonce, směr Chrastava.</h4>
+			<h4>Stoupání za výjezdem od Jablonce, 31,5 km, směr Chrastava.</h4>
 			<a href='https://api.dopravniinfo.cz/CameraImage.ashx?camera=3003' >
 				<img src='https://api.dopravniinfo.cz/CameraImage.ashx?camera=3003' loading=lazy alt="Kamera - Stoupání za výjezdem od Jablonce, směr Chrastava.">
 			</a>
 		</div>
 		<div>
-			<h4>Před sjezdem na Jablonec, směr Praha.</h4>
+			<h4>Před sjezdem na Jablonec, 31,5 km, směr Praha.</h4>
 			<a href='https://api.dopravniinfo.cz/CameraImage.ashx?camera=3954&rnd=jbgY4JtP' >
 				<img src='https://api.dopravniinfo.cz/CameraImage.ashx?camera=3954' loading=lazy alt="Kamera - Před sjezdem na Jablonec, směr Praha.">
 			</a>
 		</div>
 
 		<div>
-			<h4>Směr Chrastava</h4>
+			<h4>29,7 km, směr Chrastava</h4>
 			<a href='https://api.dopravniinfo.cz/CameraImage.ashx?camera=2941&rnd=BbPXfKrg' >
 				<img src='https://api.dopravniinfo.cz/CameraImage.ashx?camera=2941' loading=lazy alt="Kamera - Směr Chrastava">
 			</a>
 		</div>
 		<div>
-			<h4>Směr Praha</h4>
+			<h4>29,7 km, směr Praha</h4>
 			<a href='https://api.dopravniinfo.cz/CameraImage.ashx?camera=2942&rnd=BbPXfKrg' >
 				<img src='https://api.dopravniinfo.cz/CameraImage.ashx?camera=2942' loading=lazy alt="Kamera - Směr Praha">
 			</a>
