Removing weight by removing svg icons

--- a/web/index.html
+++ b/web/index.html
@@ -219,7 +219,7 @@ footer{	margin-top: 2em;
 	</main>
 	<footer style="font-size: x-small">
 		<p>Personal Home Page</p>
-		<p>🌳Marlen, <a href="https://github.com/Solamil/marlen"><img src="/pics/git-icon.svg"></a>
+		<p>🌳Marlen, <a href="https://github.com/Solamil/marlen" style="text-decoration: underline">Github</a>
 		</p>
 	</footer>
 </body>
