Seperate files from this project
Seperated motogp-schedule.txt file from this project

Seperate f1-schedule.txt file from this project

--- a/web/index.html
+++ b/web/index.html
@@ -70,8 +70,8 @@ footer{	margin-top: 2em;
 			<ul>
 				<li><a href="./feeds.html">📜</a></li>
 				<li><a href="./traffic.html">🚗</a></li>
-				<li><a href="./f1-schedule.txt">🏎️📆</a></li>
-				<li><a href="./motogp-schedule.txt">🏍️📆</a></li>
+				<li><a href="https://michalkukla.xyz/f1-schedule.txt">🏎️📆</a></li>
+				<li><a href="https://michalkukla.xyz/motogp-schedule.txt">🏍️📆</a></li>
 			</ul>
 	</nav>
 
