--- a/web/index.html
+++ b/web/index.html
@@ -25,8 +25,7 @@ input{	margin: 0px;
 img{ 	border: 2px solid beige;
 	border-radius: 2px;
 }
-h2{	text-align: center; text-decoration: underline;	}
-h3{	text-align: center; }
+h2, h3{	text-align: center; text-decoration: underline;	}
 p{ 	margin: 10px; }
 footer{	margin-top: 2em;
 	text-align: center;
@@ -54,7 +53,7 @@ footer{	margin-top: 2em;
 			<select name="lang" id="select_lang">
 				{{.LocaleOptions}}
 			</select>
-			<span>🏠</span>
+			<span><a href="https://mapy.cz/" target="_blank">🏠</a></span>
 			<input type="text" name="location" id="location_input" value="{{.Location}}" 
 				autocomplete=off >
 			<span><a href="https://www.color-hex.com/" target="_blank">🎨</a></span>
@@ -129,7 +128,11 @@ footer{	margin-top: 2em;
 			</a>
 		</div>
 		<!--<a href='./traffic.html' ><img src='./pics/CameraImage3008.webp' loading=lazy width=400 height=220 style="margin: 5px" alt="Dopravní Informace"></a>-->
-
+		<div style="display: inline-block; margin: 5px;">
+			<a href="./feeds.html"><h3>📜 Články</h3></a>
+			<!--<a href="https://michalkukla.xyz/f1-schedule.txt"><h3>F1 kalendář</h3></a> -->
+			<!--<a href="https://michalkukla.xyz/motogp-schedule.txt"><h3>MotoGP kalendář</h3></a> -->
+		</div>
 		<p>⚠️The images present on this page may be subject to copyright.</p>
 
 		<script async="" src="./js/module-wttrin-widget.js"></script>
