Use more verbose option from svatek

--- a/web/index.html
+++ b/web/index.html
@@ -76,7 +76,7 @@ footer{	margin-top: 2em;
 
 	<main  style="margin-top: 20px;">
 		<div class="cs-CZ">
-		<p style="display:inline-block"><a href="https://svatek.michalkukla.xyz/">📆Dnes má svátek {{.NameDay}}</p>
+		<p style="display:inline-block"><a href="https://svatek.michalkukla.xyz/">{{.NameDay}}</p>
 		<p style="display:inline-block"><a id="curr" href="https://czk.michalkukla.xyz/">{{.Currency}}</a></p>
 		<p><a id="cryptocurr" href="https://rate.sx/" target="_blank">{{.CryptoCurrency}}</a></p>
 		</div>
