--- a/web/index.html
+++ b/web/index.html
@@ -67,10 +67,10 @@ footer{	margin-top: 2em;
 	<hr style="color: beige">
 	<nav>
 			<ul>
-				<li><a href="./feeds.html" target="_blank">📜</a></li>
-				<li><a href="./traffic.html" target="_blank">🚗</a></li>
-				<li><a href="https://michalkukla.xyz/f1" target="_blank">🏎️📆</a></li>
-				<li><a href="https://michalkukla.xyz/motogp" target="_blank">🏍️📆</a></li>
+				<li><a href="./feeds.html">📜</a></li>
+				<li><a href="./traffic.html">🚗</a></li>
+				<li><a href="https://michalkukla.xyz/f1">🏎️📆</a></li>
+				<li><a href="https://michalkukla.xyz/motogp">🏍️📆</a></li>
 			</ul>
 	</nav>
 
@@ -121,7 +121,7 @@ footer{	margin-top: 2em;
 		<a href='./pics/forecastPrecip_1days.gif' ><img src='./pics/forecastPrecip_1days.webp' loading=lazy width=237 height=290 style="margin: 5px"></a>
 
 		<div style="display: inline-block; margin: 5px;">
-			<a href="./traffic.html" target="_blank">
+			<a href="./traffic.html">
 				<p>40,29 km, směr Chrastava</p>
 				<img src='https://api.dopravniinfo.cz/VmsImage.ashx?vms=133' loading=lazy style="height: 90px; border: 0px;" alt="Tabule 40,29 km, směr Chrastava">
 				<p>40,44 km, směr Praha</p>
@@ -130,9 +130,9 @@ footer{	margin-top: 2em;
 		</div>
 		<!--<a href='./traffic.html' ><img src='./pics/CameraImage3008.webp' loading=lazy width=400 height=220 style="margin: 5px" alt="Dopravní Informace"></a>-->
 		<div style="display: inline-block;">
-			<a href="https://michalkukla.xyz/motogp" target="_blank"><h3 style="display: inline-block; margin: 10px;">MotoGP kalendář</h3></a>
-			<a href="https://michalkukla.xyz/f1" target="_blank"><h3 style="display: inline-block; margin: 10px;">F1 kalendář</h3></a>
-			<a href="./feeds.html" target="_blank"><h3 style="display: inline-block; margin: 10px;">📜 Články</h3></a>
+			<a href="https://michalkukla.xyz/motogp"><h3 style="display: inline-block; margin: 10px;">MotoGP kalendář</h3></a>
+			<a href="https://michalkukla.xyz/f1"><h3 style="display: inline-block; margin: 10px;">F1 kalendář</h3></a>
+			<a href="./feeds.html"><h3 style="display: inline-block; margin: 10px;">📜 Články</h3></a>
 		</div>
 		<p>⚠️The images present on this page may be subject to copyright.</p>
 
