Added rss tanoy

--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,7 @@
 body{	max-width:800px; margin: auto; background-color: #893531; color:beige;}
 a{	text-decoration:none; color:beige}
 ul li a:hover{color: gray}
-ul li{	display: inline-block; text-decoration: underline; margin: 10px; }
+nav ul li{	display: inline-block; text-decoration: underline; margin: 10px; }
 input{	margin: 0px; 
 	padding: 0px 0px 0px 2px;
 	border-radius:0px;
@@ -146,6 +146,8 @@ footer{	margin-top: 2em;
 			<a href="./feeds.html"><h3 style="display: inline-block; margin: 10px;">📜 Články</h3></a>
 		</div>
 		<p>⚠️The images present on this page may be subject to copyright.</p>
+
+		{{.Tannoy}}
 
 		<script async="" src="./js/module-wttrin-widget.js"></script>
 		<script>
