--- a/web/index.html
+++ b/web/index.html
@@ -69,6 +69,7 @@ footer{	margin-top: 2em;
 	<nav>
 		<ul>
 			<li><a href="https://github.com/" target="_blank">Github</a></li>
+			<li><a href="https://mnhradiste.cz/" target="_blank">🏛️</a></li>
 		</ul>
 	</nav>
 
