Added mnhradiste rss channel

--- a/web/index.html
+++ b/web/index.html
@@ -142,6 +142,7 @@ footer{	margin-top: 2em;
 		</div>
 		<p>⚠️The images present on this page may be subject to copyright.</p>
 
+		{{.LocalNews}}
 		{{.Tannoy}}
 
 		<script async="" src="./js/module-wttrin-widget.js"></script>
