Added deutsch rss feed

--- a/web/feeds.html
+++ b/web/feeds.html
@@ -29,6 +29,11 @@ footer{	margin-top: 2em;
 </head>
 <body style="background-color:#{{.Bg}}">
 	<p><a href="./index.html">🏠</a></p>
+	<p style="text-align:center;">
+	<a href="./feeds.html?lang=de-DE" style="padding: 10px; text-decoration:underline">🇩🇪</a>
+	<a href="./feeds.html?lang=cs-CZ" style="padding: 10px; text-decoration:underline">🇨🇿</a>
+
+	</p>
 	{{.RssFeed}}
 
 	<script>
