--- a/web/index.html
+++ b/web/index.html
@@ -139,7 +139,7 @@ footer{	margin-top: 2em;
 		<div style="display: inline-block;">
 			<a href="http://jabbapoint.local/motogp.html"><h3 style="display: inline-block; margin: 10px;">MotoGP kalendář</h3></a>
 			<a href="http://jabbapoint.local/f1.html"><h3 style="display: inline-block; margin: 10px;">F1 kalendář</h3></a>
-			<a href="./feeds.html"><h3 style="display: inline-block; margin: 10px;">📜 Články</h3></a>
+			<a href="./feeds.html?lang=cs-CZ"><h3 style="display: inline-block; margin: 10px;">📜 Články</h3></a>
 		</div>
 		<p>⚠️The images present on this page may be subject to copyright.</p>
 
