Refactor, added the guardian

--- a/web/feeds.html
+++ b/web/feeds.html
@@ -30,8 +30,9 @@ footer{	margin-top: 2em;
 <body style="background-color:#{{.Bg}}">
 	<p><a href="./index.html">🏠</a></p>
 	<p style="text-align:center;">
-	<a href="./feeds.html?lang=de-DE" style="padding: 10px; text-decoration:underline">🇩🇪</a>
 	<a href="./feeds.html?lang=cs-CZ" style="padding: 10px; text-decoration:underline">🇨🇿</a>
+	<a href="./feeds.html?lang=de-DE" style="padding: 10px; text-decoration:underline">🇩🇪</a>
+	<a href="./feeds.html?lang=gb-GB" style="padding: 10px; text-decoration:underline">🇬🇧</a>
 
 	</p>
 	{{.RssFeed}}
